--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^16.12.0",
     "react-markdown": "^4.3.1",
     "react-redux": "^7.1.3",
-    "react-scripts": "3.3.0"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
